@@ -1438,6 +1438,18 @@
     <ClInclude Include="..\..\include\EDeviceTypes.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\EMeshBufferTypes.h">
+      <Filter>include\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\ESceneNodeUpdateAbs.h">
+      <Filter>include\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="CBufferRenderNode.h">
+      <Filter>Irrlicht\scene\sceneNodes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\IUserData.h">
+      <Filter>include\io</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\changes.txt">
